<resources>
    <string name="app_name">HELPIUI</string>
    <string name="login">Login Page</string>
    <string name="signin">Sign In</string>
    <string name="email_alert">Please insert your Id.</string>
    <string name="password_alert">Please insert your password.</string>
    <string name="login_success">Login Successful.</string>
    <string name="login_fail">Login failed.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="in_id">Enter Id here</string>
    <string name="in_pass">Enter Password here</string>
</resources>
